<resources>
    <string name="app_name">Partner Up</string>
    <string name="type_msg">Type message</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Vous avez des champs manquants !</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
    <string name="alert_loading">Chargement...</string>
    <string name="msg_no_user_found">No users found for chat!</string>
    <string name="myFireBaseUrl">https://flickering-fire-4999.firebaseio.com</string>
    <string name="mdp_incorrect">Mot de passe incorrect !</string>
    <string name="err_mdp">Mot de passe différent</string>

    <!-- Partie parametres -->
    <string name="rayon">Rayon de recherche (m)</string>
    <string name="rayon_summary"> <![CDATA[Le rayon dans lequel vous voulez effectuer la recherche d\'évènements, en mètres.<br/>
    Actuellement : <b>%1$s</b> m.]]></string>
    <string name="localisation">Activer la localisation</string>
    <string name="localisation_summary">Vous permet de choisir si vous souhaitez être localisé pour permettre des recherches dans les environs.</string>
    <string name="masquerNom">Masquer votre nom</string>
    <string name="masquerNom_summary">Vous permet de masquer votre nom dans les événements et la messagerie. Les autres utilisateurs ne verront que la première lettre de votre nom</string>


    <!--partie pour le menu-->
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Parametres</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_search">Recherche</string>
    <string name="menu_refresh">Rafraichir</string>
    <string name="menu_help">Aide</string>
    <string name="menu_about">A propos</string>
    <string name="error_invalid_email">Email non valide</string>


    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>

    <!-- Nav Drawer items -->
    <string name="nav_str_accueil">Accueil</string>
    <string name="nav_str_evenements">Mes événements</string>
    <string name="nav_str_rechercher_membre">Rechercher un membre</string>
    <string name="nav_str_invitations">Voir les invitations reçues</string>
    <string name="nav_str_chat">Messagerie</string>
    <string name="nav_str_profil">Mon profil</string>
    <string name="nav_str_batterie">Batterie</string>
    <string name="nav_str_logout">Déconnexion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_profil_utilisateur">ProfilUtilisateur</string>

    <!-- Vue Profil -->
    <string name="profil_nom">Identité</string>
    <string name="profil_email">Courriel</string>
    <string name="profil_ddn">Date de naissance</string>
    <string name="profil_sports">Liste des sports</string>
    <string name="profil_ajouter_connexion">Demande de connexion</string>
    <string name="profil_connecte">Connecté</string>
    <string name="profil_envoyer_message">Envoyer un message</string>

    <!-- Invitation connexion -->
    <string name="title_activity_inviter_connexion">Envoyer une invitation de connexion</string>
    <string name="connexion_email">Courriel de la personne à inviter</string>

    <!-- Créer événement -->
    <string name="title_activity_creer_evenement">Créer un événement</string>
    <string name="creer_evt_nomEvenement">Nom de l\'événement</string>
    <string name="creer_evt_dateEvenement">Date de l\'événement</string>
    <string name="creer_evt_sport">Sport</string>
    <string name="creer_evt_lieu">Lieu</string>
    <string name="creer_evt_maxParticipants">Nombre de participants max</string>
    <string name="creer_evt_bouton">Créer l\'événement</string>
    <string name="title_activity_gerer_invitations">GererInvitations</string>
    <string name="title_activity_choisir_lieu">Choisir le lieu de l\'événement</string>


    <string name="title_activity_inviter_evenement">InviterEvenement</string>
    <string name="invitation_evt_nom">Nom du contact</string>
    <string name="title_activity_batterie_information">BatterieInformation</string>

</resources>
