<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accueil"
            android:title="@string/nav_str_accueil" />
        <item
            android:id="@+id/nav_evenements"
            android:title="@string/nav_str_evenements" />
        <item
            android:id="@+id/nav_rechercher"
            android:title="@string/nav_str_rechercher_membre" />
        <item
            android:id="@+id/nav_invitations"
            android:title="@string/nav_str_invitations" />
        <item
            android:id="@+id/nav_chat"
            android:title="@string/nav_str_chat" />
        <item
            android:id="@+id/nav_profil"
            android:title="@string/nav_str_profil" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_str_logout" />
    </group>
</menu>
